--- a/src/main/resources/webapp/html/login.html
+++ b/src/main/resources/webapp/html/login.html
@@ -1,14 +1,21 @@
 <html>
 <head>
     <title>Cash changer</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-    <h2>Hello! Please fill your login</h2>
-    <div>
-        <form action="login" method="post">
-            <input type="text" name="username" placeholder="Username" required autofocus>
-            <button name="submit" value="Login" type="submit">Log in</button>
-        </form>
+<div class = "container"><div align="center">
+    <div class="row">
+        <h2>Hello! Please fill your login</h2>
+        <div class="wrapper col-xs-offset-4 col-xs-4">
+            <form action="login" method="post">
+                <hr>
+                <input type="text" name="username" class="form-control" placeholder="Username" required autofocus>
+                <button name="submit" class="btn btn-primary btn-block" value="Login" type="submit">Log in</button>
+            </form>
+        </div>
     </div>
+</div></div>
 </body>
 </html>
