--- a/src/main/resources/webapp/html/account.html
+++ b/src/main/resources/webapp/html/account.html
@@ -1,8 +1,12 @@
 <html>
 <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <body ng-app="myApp">
 <div ng-controller="myAppController as contr">
@@ -75,10 +79,8 @@
                         "amount" : $scope.transaction.cash,
                     })
                     .then(function (response) {
-                        console.log(response.data);
                         processException(response.data);
                     }, function (response) {
-                        console.log(response.data);
                         processException(response.data);
                     });
             };
@@ -87,8 +89,6 @@
         }]);
 
     function processException(infExc, isLarge) {
-        console.log(infExc);
-        console.log(infExc.alertType);
         let alertClass = "pull-right fa fa-2x";
         let btnClass = "btn";
         if (infExc.alertType == "WARNING") {
@@ -112,5 +112,22 @@
         $('#errorWithFullInfo').modal('show');
     }
 </script>
+<style>
+    .fa-danger {
+        background-color: #fff;
+        color: #d43f3a;
+        border-color: #d43f3a
+    }
+    .fa-warning {
+        background-color: #fff;
+        color: #eea236;
+        border-color: #eea236
+    }
+    .fa-info {
+        background-color: #fff;
+        color: #5bc0de;
+        border-color: #5bc0de
+    }
+</style>
 </body>
 </html>
