--- a/src/main/resources/webapp/html/account.html
+++ b/src/main/resources/webapp/html/account.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <title>Cash changer</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -10,22 +11,28 @@
 </head>
 <body ng-app="myApp">
 <div ng-controller="myAppController as contr">
-    <div class="container">
-        <div class="row">
-            <h1>Hello dear, {{user.login}}</h1>
-
+    <div class="container"><div class="row">
+        <div class="col-xs-6">
+            <h2 style="color: #414F3F;"><span class="fa fa-revolut fa-credit-card"></span> Hello dear, {{user.login}}</h2>
+        </div>
+        <div class="col-xs-6">
             <form action="info" method="get">
                 <button name="submit" class="btn btn-sm btn-primary" value="info" type="submit" style="position: absolute;right: 100px;top: 30px;">All info</button>
             </form>
             <form action="logout" method="post">
                 <button id="logoutbtn" name="submit" class="btn btn-sm btn-danger" value="Logout" type="submit" style="position: absolute;right: 20px;top: 30px;">Log out</button>
             </form>
-            <p>
-                <span>It is information about your account:</span><br>
-                <span>Login: {{user.login}}</span><br>
-                <span>Cash: {{user.cash}}</span>
-            </p>
         </div>
+    </div></div>
+    <div class="container">
+        <div class="row">
+            <div class="container">
+                <div class="row"><div class="col-xs-8" style="text-align: center"><span>It is information about your account:</span></div></div>
+                <div class="row"><div class="col-xs-6"><label>Login: </label></div><div class="col-xs-6"><label>{{user.login}}</label></div></div>
+                <div class="row"><div class="col-xs-6"><label>Cash: </label></div><div class="col-xs-6"><label>{{user.cash}}</label></div></div>
+            </div>
+        </div>
+        <hr>
         <div class="row">
             <form name = "transactionForm">
                 <div class="col-sm-4">
@@ -146,6 +153,11 @@
         background-color: #fff;
         color: #5bc0de;
         border-color: #5bc0de
+    }
+    .fa-revolut {
+        background-color: #c7cdcd;
+        color: #294ebe;
+        border-color: #6246d3;
     }
     .req.ng-invalid {
         background-color: #fae2e2;
