--- a/src/main/resources/webapp/html/allUsers.html
+++ b/src/main/resources/webapp/html/allUsers.html
@@ -1,8 +1,60 @@
 <html>
 <head>
+    <title>Cash changer</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <title>Cash changer</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
 </head>
 <body>
-    <h1>All user Info</h1>
-    <ol id="allUsers"></ol>
+
+<div class="container"><div class="row">
+    <div class="col-xs-6">
+        <h2 style="color: #414F3F;"><span class="fa fa-revolut fa-credit-card"></span> All user info page</h2>
+    </div>
+    <div class="col-xs-6">
+        <form action="login" method="get">
+            <button name="submit" class="btn btn-sm btn-primary" value="Login" type="submit" style="position: absolute;right: 100px;top: 30px;">Log in</button>
+        </form>
+        <form action="logout" method="post">
+            <button name="submit" class="btn btn-sm btn-danger" value="Logout" type="submit" style="position: absolute;right: 20px;top: 30px;">Log out</button>
+        </form>
+    </div>
+</div></div>
+<div class = "container" style="text-align: left">
+    <div class="row">
+        <h1>Users:</h1>
+        <ol id="allUsers"></ol>
+    </div>
+</div>
+<style>
+    .fa-danger {
+        background-color: #fff;
+        color: #d43f3a;
+        border-color: #d43f3a
+    }
+    .fa-warning {
+        background-color: #fff;
+        color: #eea236;
+        border-color: #eea236
+    }
+    .fa-info {
+        background-color: #fff;
+        color: #5bc0de;
+        border-color: #5bc0de
+    }
+    .fa-revolut {
+        background-color: #c7cdcd;
+        color: #294ebe;
+        border-color: #6246d3;
+    }
+    .req.ng-invalid {
+        background-color: #fae2e2;
+    }
+
+    .req.ng-invalid:focus {
+        background-color: transparent;
+    }
+</style>
 </body>
 </html>
