Add maven build for project

--- a/src/main/resources/webapp/html/account.html
+++ b/src/main/resources/webapp/html/account.html
@@ -65,7 +65,7 @@
                 <p id="bodyErrorFullInfo"></p>
             </div>
             <div class="modal-footer">
-                <button id="buttonErrorFullInfo" class="btn btn-danger" data-dismiss="modal">Закрыть</button>
+                <button id="buttonErrorFullInfo" class="btn btn-danger" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
