--- a/src/main/resources/webapp/html/login.html
+++ b/src/main/resources/webapp/html/login.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container"><div class="row">
     <div class="col-xs-6">
-        <h2 style="color: #414F3F;"><span class="fa fa-revolut fa-credit-card"></span> Login page</h2>
+        <h2 style="color: #414F3F;"><span id="imagesLogo" class="animation fa fa-revolut fa-credit-card"></span> Login page</h2>
     </div>
     <div class="col-xs-6">
         <form action="info" method="get" style="text-align: right;">
@@ -29,34 +29,7 @@
         </div>
     </div>
 </div>
-<style>
-    .fa-danger {
-        background-color: #fff;
-        color: #d43f3a;
-        border-color: #d43f3a
-    }
-    .fa-warning {
-        background-color: #fff;
-        color: #eea236;
-        border-color: #eea236
-    }
-    .fa-info {
-        background-color: #fff;
-        color: #5bc0de;
-        border-color: #5bc0de
-    }
-    .fa-revolut {
-        background-color: #c7cdcd;
-        color: #294ebe;
-        border-color: #6246d3;
-    }
-    .req.ng-invalid {
-        background-color: #fae2e2;
-    }
 
-    .req.ng-invalid:focus {
-        background-color: transparent;
-    }
-</style>
+<style></style>
 </body>
 </html>
